--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(kinDS-app VERSION 0.1.0 LANGUAGES C CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(kinDS-app main.cpp)
+add_executable(kinDS-app main.cpp "mapviewer/VoronoiDiagramGenerator.cpp")
 
 include(CTest)
 enable_testing()
