--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,13 @@ project(kinDS-app VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build Qhull as static library")
-
-# Add Qhull
-add_subdirectory(external/qhull EXCLUDE_FROM_ALL)
-
 add_executable(kinDS-app main.cpp "voronoi/VoronoiDiagram2D.cpp")
 
-# Include Qhull headers
-target_include_directories(kinDS-app PRIVATE
-    ${PROJECT_SOURCE_DIR}/external/qhull/src/libqhull_r
-)
+find_package(Qhull CONFIG REQUIRED)
+target_link_libraries(kinDS-app PRIVATE Qhull::qhull_r)
 
-# Link to Qhull's reentrant library
-target_link_libraries(kinDS-app PRIVATE qhullstatic_r)
+find_package(Qhull CONFIG REQUIRED)
+target_link_libraries(kinDS-app PRIVATE Qhull::qhullcpp)
 
 include(CTest)
 enable_testing()
