--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(kinDS-app VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(kinDS-app main.cpp "voronoi/VoronoiDiagramGenerator.cpp" "delaunay/Delaunator2D.cpp" "kinDS/KineticDelaunay.cpp" "kinDS/Polynomial.cpp" "kinDS/HalfEdgeDelaunayGraph.cpp" "kinDS/Mesh.cpp")
+add_executable(kinDS-app main.cpp "voronoi/VoronoiDiagramGenerator.cpp" "delaunay/Delaunator2D.cpp" "kinDS/KineticDelaunay.cpp" "kinDS/Polynomial.cpp" "kinDS/HalfEdgeDelaunayGraph.cpp" "kinDS/Mesh.cpp" "kinDS/Point.cpp")
 
 include(CTest)
 enable_testing()
