--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(kinDS-app VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(CGAL REQUIRED)
+
+add_subdirectory(eigen)
+
 add_executable(kinDS-app main.cpp
 	"delaunay/Delaunator2D.cpp"
 	
@@ -13,6 +17,8 @@ add_executable(kinDS-app main.cpp
 	"kinDS/Point.cpp"
 	"kinDS/SegmentBuilder.cpp"
 )
+
+target_link_libraries(kinDS-app PRIVATE CGAL::CGAL)
 
 include(CTest)
 enable_testing()
