Split kinetic delaunay into header and body

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ set(KINDS_SOURCES
 	"kinDS/StrandTree.cpp"
 	"kinDS/Delaunator2D.cpp"
 	"kinDS/HalfEdgeDelaunayGraph.cpp"
+    "kinDS/KineticDelaunay.cpp"
 	"kinDS/Polynomial.cpp"
 	"kinDS/SegmentBuilder.cpp"
 	"kinDS/TreeMesher.cpp"
